# roscon25_es_stonefish_workshop

./: Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  run.sh  steps.txt
auv_architecture/: CMakeLists.txt  package.xml
auv_architecture/include/auv_architecture/: EventRenderer.hpp
auv_architecture/launch/: auv_architecture.launch
auv_architecture/scripts/: auv_navigator_node.cpp  auv_pilot_node.cpp  event_render_node.cpp
auv_architecture/src/: EventRenderer.cpp
auv_controller/: CMakeLists.txt  auv_controller_plugin.xml  dependencies.txt  package.xml
auv_controller/include/auv_controller/: auv_controller.hpp
auv_controller/scripts/: testing_controller.cpp
auv_controller/src/: auv_controller.cpp
auv_controllers/: CMakeLists.txt  auv_controllers_plugin.xml  package.xml
auv_controllers/include/auv_controllers/: BodyPoseController.hpp  BodyVelocityController.hpp  BodyWrenchController.hpp
auv_controllers/include/auv_controllers/legacy/: BodyVelocityControllerNoChain.hpp
auv_controllers/scripts/: testing_controller.cpp
auv_controllers/src/: BodyPoseController.cpp  BodyVelocityController.cpp  BodyWrenchController.cpp  auv_controllers_parameters.yaml  auv_pose_controller_parameters.yaml  auv_velocity_controller_parameters.yaml  auv_wrench_controller_parameters.yaml
auv_description/: CMakeLists.txt  package.xml
auv_description/launch/: auv.launch.py
auv_description/urdf/: auv.ros2_control.xacro  auv.urdf.xacro  auv_description.urdf.xacro
auv_stonefish/: CMakeLists.txt  package.xml
auv_stonefish/launch/: auv_sim.launch  auv_simulation.launch.py
auv_stonefish/resources/: auv.blend  auv.blend1
auv_stonefish/scenarios/: sea.scn
auv_stonefish/scenarios/robot/: auv.scn
auv_stonefish/scripts/: auv_body_feedback.cpp  auv_pose_inverse.cpp  publish_propeller.py
bluerov_roscon_description/: CMakeLists.txt  package.xml
bluerov_roscon_description/config/: hardware_interface.yaml  view.rviz
bluerov_roscon_description/launch/: bluerov_roscon_viz.launch.py
bluerov_roscon_description/scripts/: tam_compute.py
bluerov_roscon_description/urdf/: bluerov_roscon.ros2_control.xacro  bluerov_roscon.urdf.xacro  bluerov_roscon_description.urdf.xacro
bluerov_stonefish/: CMakeLists.txt  package.xml
bluerov_stonefish/launch/: bluerov_sim.launch
bluerov_stonefish/scenarios/: objects.scn  sea.scn
bluerov_stonefish/scenarios/robot/: bluerov.scn
bluerov_stonefish/scripts/: publish_propeller.py
roscontrol_test/: CMakeLists.txt  package.xml
roscontrol_test/config/: controller.yaml  controllerV2.yaml
roscontrol_test/launch/: testcontroller.launch.py
roscontrol_test/scripts/: joy_control.cpp  pid_velocity_feedback.cpp  publish_chain.py  publish_pose.py  publish_wrench.py  velocity_req_rqt.py
roscontrol_test/src/: ctrl_test.cpp
rqt_slides/: CMakeLists.txt  package.xml  plugin.xml  setup.py
rqt_slides/include/rqt_slides/: image_view.h  parse_xml.hpp  ratio_layouted_frame.hpp
rqt_slides/resource/: guion.xml
rqt_slides/scripts/: image_publisher  rqt_slides
rqt_slides/src/rqt_slides/: image_view.cpp  image_view.ui  parse_xml.cpp  ratio_layouted_frame.cpp
rqt_slides/src/tinyxml2/: tinyxml2.cpp
stonefish_ros2_hw_interface/: CMakeLists.txt  package.xml  stonefish_hw_interface_plugin.xml
stonefish_ros2_hw_interface/include/stonefish_hw_interface/: ThrusterGroupHWInterface.hpp
stonefish_ros2_hw_interface/scripts/: testing_hardware.cpp
stonefish_ros2_hw_interface/src/: ThrusterGroupHWInterface.cpp
