<?xml version="1.0"?>
<package format="3">
  <name>bluerov_roscon_description</name>
  <version>24.1.0</version>
  <description>The bluerov_roscon_description package</description>
  <maintainer email="cirs-repositories@udg.edu">CIRS UdG</maintainer>
  <license>GPL-3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS Dependencies -->
  <depend>robot_state_publisher</depend>

  <exec_depend>ros2launch</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>